# mana

./: .appveyor.yml  .cvsignore  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .travis.yml  AUTHORS  Aethyra.dev  Aethyra.vcproj  AethyraLin2WinXcompile.cbp  AethyraTarget.xcconfig  Aethyra_Prefix.pch  CMakeLists.txt  ChangeLog  Doxyfile  GenDeb.sh  INSTALL  Info.plist  LICENSE.rtf  Makefile.am  Makefile.in  Mana.vcproj  ManaExperiment.vcproj  ManaWorld.sln  ManaWorld.vcproj  NEWS  README  README.cmake  README.md  The Mana Experiment.dev  The Mana World.dev  WinReadMe.txt  aethyra.cbp  aethyra.desktop  aethyra.icns  autobuild.sh  autogen.sh  config.h.in  config.status  (+26 more)
data/: CMakeLists.txt  Makefile.am  branding.xml  items.xsd
data/fonts/: CMakeLists.txt  Makefile.am
data/graphic/: .cvsignore
data/graphics/: CMakeLists.txt  Makefile.am
data/graphics/gui/: CMakeLists.txt  Makefile.am  Makefile.in  bg.xml  colors.xml  gui.xml  npcdialog.xml  speechbubble.xml  theme.xml  window.xml
data/graphics/images/: CMakeLists.txt  Makefile.am  copyright.txt
data/graphics/sprites/: CMakeLists.txt  Makefile.am
data/help/: CMakeLists.txt  Makefile.am  about.txt  accounts.txt  changes.txt  commands.txt  header.txt  index.txt  skills.txt  support.txt  team.txt  windows.txt
data/icons/: Aethyra.icns  CMakeLists.txt  Makefile.am  aethyra.xpm  mana.xpm  tmw.xpm
data/sfx/system/: CMakeLists.txt
docs/: .cvsignore  AUTHORS.txt  CHANGELOG.txt  FAQ.txt  HACKING.txt  Makefile.am  README.txt  ReadMe.txt  ServerData.txt  TODO.txt  TODOS  aethyra.6  architecture.txt  clientupdates.txt  example.mana  items.txt  lpc2012.mana  mana.6  mapdev.txt  packages.txt  progression.txt  server.txt  sounddev.txt  tme.6  tmw.6  win32-release.txt
docs/INSTALL/: debian.txt  linux.txt  mingw.txt  ubuntu.txt  win32.txt
docs/SOURCE/: Doxyfile  aethyra.doxcfg  aethyradox.sh  tme.doxcfg  tmedox.sh  tmw.doxcfg  tmwdox.sh
docs/meetings/: dev-20050204.txt  dev-20050211.txt  dev-20050218.txt  dev-20050225.txt
po/: CMakeLists.txt  LINGUAS  Makevars  POTFILES.in  aethyra.pot  ar.po  bg.po  ca.po  cs.po  da.po  de.po  en_GB.po  eo.po  es.po  et.po  fa.po  fi.po  fr.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  mana.pot  nb.po  nds.po  nl.po  pl.po  pt.po  pt_BR.po  pt_ES.po  ru.po  sk.po  sq.po  sv.po  ta.po  te.po  th.po  (+11 more)
src/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  SDLMain.m  action.cpp  action.h  actor.cpp  actor.h  actorsprite.cpp  actorsprite.h  actorspritemanager.cpp  actorspritemanager.h  aethyra.rc  animatedsprite.cpp  animatedsprite.h  animation.cpp  animation.h  animationparticle.cpp  animationparticle.h  astar.cpp  astar.h  avatar.cpp  avatar.h  base64.cpp  base64.h  being.cpp  being.h  beingmanager.cpp  beingmanager.h  bundle.h  bundle.mm  channel.cpp  channel.h  channelmanager.cpp  channelmanager.h  chatlog.cpp  chatlog.h  chatlogger.cpp  chatlogger.h  (+137 more)
src/cpp0x_compat/: cstdint
src/graphic/: 2xsai.cpp  2xsai.h  graphic.cpp  graphic.h  image.cpp  image.h  imagerect.h  spriteset.cpp  spriteset.h  super_eagle.cpp  super_eagle.h
src/gui/: abilitieswindow.cpp  abilitieswindow.h  allegroinput.cpp  allegroinput.h  beingpopup.cpp  beingpopup.h  box.cpp  box.h  browserbox.cpp  browserbox.h  buddywindow.cpp  buddywindow.h  button.cpp  button.h  buttonbox.cpp  buttonbox.h  buy.cpp  buy.h  buydialog.cpp  buydialog.h  buysell.cpp  buysell.h  buyselldialog.cpp  buyselldialog.h  changeemaildialog.cpp  changeemaildialog.h  changepassworddialog.cpp  changepassworddialog.h  char_select.cpp  char_select.h  char_server.cpp  char_server.h  charcreatedialog.cpp  charcreatedialog.h  chargedialog.cpp  chargedialog.h  charselectdialog.cpp  charselectdialog.h  chat.cpp  chat.h  (+278 more)
src/gui/widgets/: avatar.cpp  avatar.h  avatarlistbox.cpp  avatarlistbox.h  browserbox.cpp  browserbox.h  button.cpp  button.h  channeltab.cpp  channeltab.h  chattab.cpp  chattab.h  checkbox.cpp  checkbox.h  container.cpp  container.h  desktop.cpp  desktop.h  dropdown.cpp  dropdown.h  emoteshortcutcontainer.cpp  emoteshortcutcontainer.h  flowcontainer.cpp  flowcontainer.h  guildlistbox.cpp  guildlistbox.h  icon.cpp  icon.h  inttextfield.cpp  inttextfield.h  itemcontainer.cpp  itemcontainer.h  itemlinkhandler.cpp  itemlinkhandler.h  label.cpp  (+60 more)
src/net/: abilityhandler.h  adminhandler.h  beinghandler.cpp  beinghandler.h  buysellhandler.cpp  buysellhandler.h  charhandler.cpp  charhandler.h  charserverhandler.cpp  charserverhandler.h  chathandler.cpp  chathandler.h  connection.cpp  connection.h  download.cpp  download.h  effecthandler.cpp  effecthandler.h  equipmenthandler.cpp  equipmenthandler.h  gamehandler.h  generalhandler.h  guildhandler.cpp  guildhandler.h  internal.cpp  internal.h  inventoryhandler.cpp  inventoryhandler.h  itemhandler.cpp  itemhandler.h  logindata.h  loginhandler.cpp  loginhandler.h  logouthandler.cpp  logouthandler.h  maphandler.h  maploginhandler.cpp  maploginhandler.h  messagehandler.cpp  messagehandler.h  (+32 more)
src/resources/: abilitydb.cpp  abilitydb.h  action.cpp  action.h  ambientlayer.cpp  ambientlayer.h  ambientoverlay.cpp  ambientoverlay.h  animation.cpp  animation.h  attributes.cpp  attributes.h  beinginfo.cpp  beinginfo.h  buddylist.cpp  buddylist.h  chardb.cpp  chardb.h  colordb.cpp  colordb.h  dye.cpp  dye.h  emotedb.cpp  emotedb.h  equipmentdb.cpp  equipmentdb.h  equipmentinfo.cpp  equipmentinfo.h  gettext.h  hairdb.cpp  hairdb.h  image.cpp  image.h  imageloader.cpp  imageloader.h  imageset.cpp  imageset.h  imagewriter.cpp  imagewriter.h  itemdb.cpp  (+46 more)
src/sound/: sound.cpp  sound.h
src/utils/: base64.cpp  base64.h  bufferedrwops.c  bufferedrwops.h  copynpaste.cpp  copynpaste.h  dtor.h  encryption.h  fastsqrt.h  filesystem.h  gettext.h  mathutils.cpp  mathutils.h  minmax.h  mkdir.c  mkdir.cpp  mkdir.h  mutex.h  path.cpp  path.h  physfsrwops.h  sha256.cpp  sha256.h  specialfolder.cpp  specialfolder.h  stringutils.cpp  stringutils.h  strprintf.cpp  strprintf.h  time.cpp  time.h  tostring.h  trim.h  wingettimeofday.h  xml.cpp  xml.h  zlib.cpp  zlib.h
tools/dyecmd/: CMakeLists.txt  README
(+416 files in other folders)
