EXTRA_DIST = map/new_3-1.gat \
	     core/graphics/gui/bg_quad_dis.png \
	     core/graphics/gui/button.png \
	     core/graphics/gui/button_disabled.png \
	     core/graphics/gui/buttonhi.png \
	     core/graphics/gui/buttonpress.png \
	     core/graphics/gui/checkbox.png \
	     core/graphics/gui/fixedfont.png \
	     core/graphics/gui/mouse.png \
	     core/graphics/gui/radioin.png \
	     core/graphics/gui/radioout.png \
	     core/graphics/gui/slider.png \
	     core/graphics/gui/textbox.png \
	     core/graphics/gui/vscroll_blue.png \
	     core/graphics/gui/vscroll_grey.png \
	     core/graphics/gui/vscroll_red.png \
	     core/graphics/tiles/desert.png \
	     core/graphics/sprites/emotions.png \
	     core/graphics/sprites/items.png \
	     core/graphics/sprites/monsters.png \
	     core/graphics/sprites/npcs.png \
	     core/graphics/sprites/player_male_base.png \
	     core/graphics/sprites/player_male_hair.png \
	     core/graphics/sprites/weapons.png \
	     core/graphics/images/login_wallpaper.png \
	     sound/wavs/level.ogg
