EXTRA_DIST = maps/new_1-1.tmx.gz \
	     maps/new_3-1.tmx.gz \
	     graphics/gui/bg_quad_dis.png \
	     graphics/gui/button.png \
	     graphics/gui/button_disabled.png \
	     graphics/gui/buttonhi.png \
	     graphics/gui/buttonpress.png \
	     graphics/gui/checkbox.png \
	     graphics/gui/fixedfont.png \
	     graphics/gui/mouse.png \
	     graphics/gui/radioin.png \
	     graphics/gui/radioout.png \
	     graphics/gui/slider.png \
	     graphics/gui/textbox.png \
	     graphics/gui/vscroll_blue.png \
	     graphics/gui/vscroll_grey.png \
	     graphics/gui/vscroll_red.png \
	     graphics/tiles/desert1.png \
	     graphics/tiles/desert2.png \
	     graphics/tiles/collision.png \
	     graphics/sprites/emotions.png \
	     graphics/sprites/items.png \
	     graphics/sprites/monsters.png \
	     graphics/sprites/npcs.png \
	     graphics/sprites/player_male_base.png \
	     graphics/sprites/player_male_hair.png \
	     graphics/sprites/weapons.png \
	     graphics/images/login_wallpaper.png \
	     sfx/bow_shoot_1.ogg
