EXTRA_DIST = packages.txt \
	     FAQ.txt \
	     SOURCE/tmwdox.sh \
	     SOURCE/tmw.doxcfg \
	     HACKING.txt \
	     items.txt \
	     server.txt \
	     progression.txt \
	     INSTALL/debian.txt \
	     INSTALL/win32.txt \
	     INSTALL/linux.txt \
	     meetings/dev-20050204.txt \
	     meetings/dev-20050211.txt
