EXTRA_DIST = packages.txt \
	     FAQ.txt \
	     HACKING.txt \
	     SOURCE/tmwdox.sh \
	     SOURCE/tmw.doxcfg \
	     items.txt \
	     progression.txt \
	     INSTALL/debian.txt \
	     INSTALL/win32.txt \
	     INSTALL/linux.txt \
	     meetings/dev-20050204.txt \
	     meetings/dev-20050211.txt \
	     meetings/dev-20050218.txt \
	     meetings/dev-20050225.txt
